--- a/be-movies-app/package.json
+++ b/be-movies-app/package.json
@@ -21,5 +21,11 @@
     "multer": "^2.0.1",
     "pg": "^8.16.2",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "jest": "^30.0.2",
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.1"
   }
 }
