--- a/be-movies-app/.env.example
+++ b/be-movies-app/.env.example
@@ -3,3 +3,4 @@ CLOUDINARY_URL=CLOUDINARY_URL
 DB_PASSWORD=DB_PASSWORD
 DATABASE_URL=DATABASE_URL
 PORT=3000
+TMDB_READ_ACCESS_TOKEN=TMDB_READ_ACCESS_TOKEN
