--- a/be-movies-app/package.json
+++ b/be-movies-app/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "be-movies-app",
+  "name": "h84-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "H84 Movie App Backend",
+  "main": "app.js",
   "scripts": {
-    "dev": "npx nodemon app.js",
-    "test": "jest --detectOpenHandles --verbose --forceExit --runInBand"
+    "start": "node bin/www",
+    "dev": "npx nodemon bin/www",
+    "test": "jest --detectOpenHandles --verbose --forceExit --runInBand",
+    "seed": "node scripts/seed.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "axios": "^1.10.0",
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
+    "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
+    "debug": "^4.4.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
     "pg": "^8.16.2",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "jest": "^30.0.2",
-    "nodemon": "^3.1.10",
-    "sequelize-cli": "^6.6.3",
-    "supertest": "^7.1.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.1",
+    "supertest": "^6.3.3"
   }
 }
