--- a/be-movies-app/.env.example
+++ b/be-movies-app/.env.example
@@ -1,6 +1,6 @@
+TMDB_READ_TOKEN=TMDB_READ_TOKEN
+GEMINI_API_KEY=GEMINI_API_KEY
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+PORT=PORT
 JWT_SECRET=JWT_SECRET
-CLOUDINARY_URL=CLOUDINARY_URL
-DB_PASSWORD=DB_PASSWORD
-DATABASE_URL=DATABASE_URL
-PORT=3000
-TMDB_READ_ACCESS_TOKEN=TMDB_READ_ACCESS_TOKEN
