--- a/be-movies-app/.env.example
+++ b/be-movies-app/.env.example
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
 PORT=PORT
 JWT_SECRET=JWT_SECRET
+DB_PASSWORD=DB_PASSWORD
+DATABASE_URL=DATABASE_URL
