--- a/be-movies-app/package.json
+++ b/be-movies-app/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.1.3",
     "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "debug": "^4.4.1",
